Swapped out regex for c# character function IsWhiteSpace(). Put more work into argument error catching

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Frequency_analysis": {
-      "commandName": "Project",
-      "commandLineArgs": "Brandon"
+      "commandName": "Project"
     },
     "Arg": {
       "commandName": "Project",
